--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,48 @@
-<h2>Sign up</h2>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col bg-color">
+      <h2 class="fs-6 log-title py-2 text-center text-white p-0">REGISTER</h2>
+      <%= link_to root_path do %>
+        <box-icon class="arrow-back" name='arrow-back' color='#fff'></box-icon>
+      <% end %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="text-center log-input">
+          <div class="field input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">
+                <box-icon name='user-circle' type='solid' color='#ccc' class="user-icon"></box-icon>
+              </span>
+            </div>
+            <%= f.file_field :photo, autofocus: true, autocomplete: "photo", class: "custom-input custom-input-email px-5 py-4 rounded-0 w-100" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <div class="field">
+            <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "First Name" %>
+          </div>
+
+          <div class="field">
+            <%= f.text_field :surname, autofocus: true, autocomplete: "surname", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Last Name" %>
+          </div>
+
+          <div class="field">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Email" %>
+          </div>
+
+          <div class="field">
+            <%= f.password_field :password, autocomplete: "new-password", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Password" %>
+          </div>
+
+          <div class="field">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Confirm Password" %>
+          </div>
+
+          <div class="actions my-2">
+            <%= f.submit "Sign up" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :surname %><br />
-    <%= f.text_field :surname, autofocus: true, autocomplete: "surname" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
