--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
+<% if user_signed_in? %>
+  redirect_to user_path(current_user)
+<% else %>
+
 <div class="container-fluid position-fixed">
   <div class="align-items-center d-flex justify-content-center title">
     <div class="row">
@@ -6,10 +10,12 @@
       </div>
     </div>
   </div>
-    <div class="row">
-      <div class="col text-center user-btn title">
-        <%= link_to "Log In", new_user_session_path, class: "btn my-2 w-100 p-3 rounded-0" %>
-        <%= link_to "Sign Up", new_user_registration_path, class: "btn my-3 w-100 p-3 rounded-0"%> </br>
-      </div>
+  <div class="row">
+    <div class="col text-center user-btn title">
+      <%= link_to "Log In", new_user_session_path, class: "btn my-2 w-100 p-3 rounded-0" %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "btn my-3 w-100 p-3 rounded-0" %>
     </div>
+  </div>
 </div>
+
+<% end %>
