--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,8 +12,8 @@
   </div>
   <div class="row">
     <div class="col text-center user-btn title">
-      <%= link_to "Log In", new_user_session_path, class: "btn my-2 w-100 p-3 rounded-0" %>
-      <%= link_to "Sign Up", new_user_registration_path, class: "btn my-3 w-100 p-3 rounded-0" %>
+      <%= link_to "LOG IN", new_user_session_path, class: "btn w-100 p-3 rounded-0" %>
+      <%= link_to "SIGN UP", new_user_registration_path, class: "btn w-100 p-3 rounded-0" %>
     </div>
   </div>
 </div>
