--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
   </head>
 
   <body>
+    </div>
+    <%= yield %>
+        <div class="my-5">
     <% if notice || alert %>
       <p class="alert"><%= alert %></p>
       <% else %>
       <p class="notice"><%= notice %></p>
     <% end %>
-    <%= yield %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
