--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,18 +6,18 @@
         <box-icon class="arrow-back" name='arrow-back' color='#fff'></box-icon>
       <% end %>
 
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <div class="text-center log-input">
           <div class="field input-group">
             <div class="input-group-prepend">
-                 <box-icon name='user-circle' type='solid' color='#ccc' class="user-icon"></box-icon>
-             </div>
+                <box-icon name='user-circle' type='solid' color='#ccc' class="user-icon"></box-icon>
+            </div>
             <%= f.file_field :photo, autofocus: true, autocomplete: "photo", class: "custom-input custom-input-email px-5 py-4 rounded-0 w-100" %>
           </div>
 
           <div class="field">
-            <%= f.text_field :name, autocomplete: "name", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "First Name" %>
+            <%= f.text_field :name, autocomplete: "name", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Full Name" %>
           </div>
 
           <div class="field">
@@ -33,7 +33,7 @@
           </div>
 
           <div class="actions my-2">
-            <%= f.submit "Sign up" %>
+            <%= f.submit "Sign up", class:"btn btn-primary" %>
           </div>
         </div>
       <% end %>
