--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
   <div class="align-items-center d-flex justify-content-center title">
     <div class="row">
       <div class="col text-center">
-        <h2 class="snap">Snapscan</h2>
+        <h2 class="snap">4Budget</h2>
       </div>
     </div>
   </div>
