Update users index Add credit_card

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   redirect_to user_path(current_user)
 <% else %>
 
-<div class="container-fluid position-fixed">
+<div class="container-fluid p-0 position-fixed">
   <div class="align-items-center d-flex justify-content-center title">
     <div class="row">
       <div class="col text-center">
