--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,10 @@
-<h1>Editing user</h1>
-
-<%= render "form", user: @user %>
-
-<br>
-
-<div>
-  <%= link_to "Show this user", @user %> |
-  <%= link_to "Back to users", users_path %>
-  <%= button_to "Destroy this user", @user, method: :delete %>
-</div>
+  <div class="container pt-4 bg-user-show">
+    <div class="row"> 
+      <div class="col">
+        <h1>Editing user</h1>
+        <%= render "form", user: @user %>
+        <%= link_to "Show this user", @user %> |
+        <%= link_to "Back to users", users_path %>
+      </div>
+    </div>
+  </div>
