--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -6,7 +6,13 @@
   <ul>
     <% @payments.each do |payment| %>
       <li>
-        Amount: <%= payment.amount %>, Description: <%= payment.description %>, Date: <%= payment.created_at %>
+        Amount: <%= payment.amount %>
+      </li>
+      <li>
+        Date: <%= payment.created_at %>
+      </li>
+      <li>
+        Name: <%= payment.name %>
       </li>
     <% end %>
   </ul>
