--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -2,20 +2,19 @@
 
 <div id="payments">
   <p>Total Amount: <%= @total_amount %></p>
-
-  <ul>
-    <% @payments.each do |payment| %>
-      <li>
-        Amount: <%= payment.amount %>
-      </li>
-      <li>
-        Date: <%= payment.created_at %>
-      </li>
-      <li>
-        Name: <%= payment.name %>
-      </li>
-    <% end %>
-  </ul>
+  <% @payments.each do |payment| %>
+    <ul class="list-unstyled">
+        <li>
+          Amount: <%= payment.amount %>
+        </li>
+        <li>
+          Date: <%= payment.created_at %>
+        </li>
+        <li>
+          Name: <%= payment.name %>
+        </li>
+    </ul>
+  <% end %>
 
   <%= link_to "Add a New Transaction", new_category_payment_path(@category) %>
   <%= link_to "Return to Categories", root_path %>
