Adding styles Update models

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   redirect_to user_path(current_user)
 <% else %>
 
-<div class="container-fluid p-0 position-fixed">
+<div class="container-fluid">
   <div class="align-items-center d-flex justify-content-center title">
     <div class="row">
       <div class="col text-center">
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col text-center user-btn title">
+    <div class="col text-center user-btn">
       <%= link_to "LOG IN", new_user_session_path, class: "btn w-100 p-3 rounded-0" %>
       <%= link_to "SIGN UP", new_user_registration_path, class: "btn w-100 p-3 rounded-0" %>
     </div>
