--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,12 +10,16 @@
 
 body {
   font-family: var(--light-fuente);
-  overflow: hidden;
+  overflow: scroll;
+  background-color: #F0F2F1;
+}
+
+hr.dotted {
+  border-top: 1px dashed #ccc
 }
 
 .title {
   height: 60vh !important;
-  background-color: #F0F2F1;
   font-family: var(--light-fuente);
 }
 
@@ -59,10 +63,6 @@ h2.log-title, .bg-blue {
   padding: 0.5rem;
 }
 
-.log-input {
-  margin-top: 3rem;
-}
-
 .forgot-text {
   text-decoration: none;
   color: var(--color-text);
@@ -72,7 +72,7 @@ h2.log-title, .bg-blue {
   position: absolute;
   top: 0;
   z-index: 1;
-  margin-top: 5px;
+  margin-top: 20px;
   cursor: pointer;
 }
 
@@ -98,6 +98,10 @@ h2.log-title, .bg-blue {
   color: white;
   font-size: 16px;
   height: 100vh;
+}
+
+.input-width {
+  width: 75px;
 }
 
 /* Transaction */
@@ -129,4 +133,19 @@ h2.log-title, .bg-blue {
   bottom: 0;
   left: 0;
   width: 100%;
+}
+
+.zoom-on-hover {
+  transition: transform 0.3s ease;
+  color: red
+}
+
+.zoom-on-hover:hover {
+  transform: scale(1.1);
+}
+
+.shadow {
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: #ffffff;
 }
