--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h2 class="bg-blue fs-6 m-0 py-4 text-center text-white section-title">CATEGORIES</h2>
-<div class="align-items-center d-flex justify-content-between m-2">
+<div class="align-items-center d-flex justify-content-between p-2 bg-white">
   <div class="text-body-tertiary text-decoration-none">Gift credit</div>
   <div>$45.00</div>
 </div>
@@ -8,28 +8,25 @@
   <div class="row">
     <div class="col bg-color">
 
-      <div id="categories" class="">
+      <div id="categories">
         <% @categories.each do |category| %>
         
-          <div id="<%= dom_id category %>">
-          
-            <div class="bg-body border d-flex justify-content-evenly mt-2 pt-3">
-               <p>
+          <div id="<%= dom_id category %>" class="zoom-on-hover">
+            <%= link_to category_payments_path(category),class:"text-decoration-none", :action => 'go' do %>
+            <div class="bg-body border d-flex justify-content-evenly mt-3 pt-3 shadow">
+               <p class="text-body-tertiary">
               <%= category.icon %>
             </p>
 
-            <p>
-              <%= link_to category.name, category_payments_path(category), class:"text-body-tertiary text-decoration-none" %>
+            <p class="text-body-tertiary input-width">
+              <%= category.name %>
             </p>
 
-            <p>
+             <p class="text-black">
               <%= number_to_currency(total_amount(category)) %>
             </p>
             </div>  
-            <div>
-              <%# <%= link_to "Edit this category", edit_category_path(category) %>
-              <%# <%= button_to "Destroy this category", category, method: :delete, data: { confirm: "Are you sure?" } %>
-            </div>
+            <% end %>
           </div>
         <% end %>
       </div>
@@ -42,5 +39,4 @@
       <div>
     </div>
   </div>
-</div>
 </div>
