--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New category</h1>
-
-<%= render "form", category: @category %>
-
-<br>
-
-<div>
-  <%= link_to "Back to categories", categories_path %>
+<div class="bg-grey container-fluid vh-100">
+  <div class="row">
+    <div class="bg-color col mt-5">
+      <h2 class="fs-6 log-title py-4 text-center text-white section-title">NEW CATEGORY</h2>
+      <%= link_to root_path do %>
+        <box-icon class="arrow-back" name='arrow-back' color='#fff'></box-icon>
+      <% end %>
+        <%= render "form", category: @category %>
+      </div>
+    </div>
 </div>
+
+
