--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
+      <h2 class="bg-blue fs-6 m-0 py-4 text-center text-white section-title">REGISTER</h2>
 <div class="container-fluid">
   <div class="row">
-    <div class="col bg-color">
-      <h2 class="fs-6 log-title py-2 text-center text-white p-0">REGISTER</h2>
+    <div class="bg-color col mt-3">
       <%= link_to root_path do %>
         <box-icon class="arrow-back" name='arrow-back' color='#fff'></box-icon>
       <% end %>
