--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,10 +1,12 @@
-<h1>New payment</h1>
-
-<%= render "form", payment: @payment %>
-
-<br>
-
-<div>
-<%= link_to "Back to payments", category_payments_path(@category) %>
-
+<div class="bg-grey container-fluid vh-100">
+  <div class="row">
+    <div class="bg-color col mt-5">
+      <h2 class="fs-6 log-title py-4 text-center text-white section-title">NEW PAYMENTS</h2>
+      <%= link_to category_payments_path do %>
+        <box-icon class="arrow-back" name='arrow-back' color='#fff'></box-icon>
+      <% end %>
+      <%= render "form", payment: @payment %>
+    </div>
+  </div>
 </div>
+
