--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,7 +4,7 @@
   <div class="text-body-tertiary text-decoration-none">Gift credit</div>
   <div>$45.00</div>
 </div>
-<div class="bg-grey container-fluid vh-100">
+<div class="bg-grey container-fluid">
   <div class="row">
     <div class="col bg-color">
 
