--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@category, @payment], local: true) do |form| %>
+<%= form_with(model: [@category, @payment], local: true, class:"py-5") do |form| %>
   <% if @payment.errors.any? %>
     <div style="color: red" class="alert alert-warning">
       <ul class="list-unstyled">
@@ -19,13 +19,16 @@
     </div>
 
     <div>
-      <%= form.select :category_id, options_from_collection_for_select(@categories, 'id', 'name'), { include_blank: 'Select a category' }, class: "border-0 my-2 p-2 rounded-3 shadow w-100" %>
+      <% #= form.collection_select :category_ids, current_user.categories, :id, :name, required: true %>
+      <%= form.select :category_ids, options_from_collection_for_select(@categories, 'id', 'name'), { include_blank: 'Select a category' }, class: "border-0 my-2 p-2 rounded-3 shadow w-100" %>
     </div>
 
     <div class="footer-container">
       <div class="text-center">
         <div class="btn-green p-2">
-          <%= form.submit class: "border-light btn btn-green w-100" %>
+          <turbo-frame id="new_payment_form">
+            <%= form.submit class: "border-light btn btn-green w-100" %>
+          </turbo-frame>
         </div>
       </div>
     </div>
