--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -2,7 +2,7 @@
       <%= link_to root_path do %>
         <box-icon class="arrow-back mx-2" name='arrow-back' color='#fff'></box-icon>
       <% end %>
-<div class="bg-grey container-fluid vh-100">
+<div class="bg-grey container-fluid">
   <div class="row">
     <div class="bg-color col mb-5">
      <h2>Payments for <%= @category.name %></h2>
