--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,8 +1,8 @@
-  <h2 class="fs-6 log-title py-4 text-center text-white section-title">PAYMENTS</h2>
+  <h2 class="fs-6 log-title py-4 section-title text-center text-white z-1">PAYMENTS</h2>
       <%= link_to root_path do %>
         <box-icon class="arrow-back mx-2" name='arrow-back' color='#fff'></box-icon>
       <% end %>
-<div class="bg-grey container-fluid">
+<div class="bg-grey container-fluid pt-header">
   <div class="row">
     <div class="bg-color col mb-5">
      <h2>Payments for <%= @category.name %></h2>
