Update index Payment style

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h2 class="bg-blue fs-6 m-0 py-4 text-center text-white section-title">CATEGORIES</h2>
+  <h2 class="bg-blue fs-5 m-0 py-4 text-center text-white section-title letter-spacing">CATEGORIES</h2>
 <div class="align-items-center d-flex justify-content-between p-2 bg-white">
   <div class="text-body-tertiary text-decoration-none">Gift credit</div>
   <div>$45.00</div>
