--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,25 +1,31 @@
-@import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.cdnfonts.com/css/proxima-nova-condensed');
 :root {
   --main: #3778c2;
   --second: #5fb523;
   --color-text: #434b54;
-  --bold-fuente: 'proxima-nova', sans-serif;
-  --light-fuente: 'proxima-nova', sans-serif
 }
 
 body {
-  font-family: var(--light-fuente);
+  font-family: 'Proxima Nova Condensed', sans-serif;
+  font-family: 'Proxima Nova Extra Condensed', sans-serif;
   background-color: #F0F2F1;
+}
+
+p {
+  padding: 0;
+  margin: 0;
 }
 
 hr.dotted {
   border-top: 1px dashed #ccc
 }
 
+.letter-spacing {
+  letter-spacing: 0.5px;
+}
+
 .title {
   height: 60vh !important;
-  font-family: var(--light-fuente);
 }
 
 .user-btn a:hover{
@@ -29,11 +35,6 @@ hr.dotted {
 
 .user-btn a {
   transition: background-color 1s, color 1s;
-}
-
-.snap {
-  font-family: 'Pacifico', cursive;
-  font-size: 3.5rem;
 }
 
 .section-title {
@@ -103,10 +104,10 @@ h2.log-title, .bg-blue {
   width: 75px;
 }
 
-.pt-header {
-  margin-top: 5rem;
+.align-custom {
+  align-items: baseline;
+  border: 2px solid white;
 }
-
 /* Transaction */
 .bg-grey {
   background-color: #f1f1f1;
