--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,22 +1,33 @@
-  <h2 class="fs-6 log-title py-4 section-title text-center text-white z-1">PAYMENTS</h2>
-      <%= link_to root_path do %>
-        <box-icon class="arrow-back mx-2" name='arrow-back' color='#fff'></box-icon>
-      <% end %>
-<div class="bg-grey container-fluid pt-header">
+<header>
+  <div class="d-flex justify-content-between align-items-center bg-blue p-3">
+    <%= link_to root_path do %>
+      <box-icon class="" name='arrow-back' color='#fff'>asd</box-icon>
+    <% end %>
+    <h2 class="text-white">PAYMENTS</h2>
+    <div class="position-relative">
+      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn text-white" %>
+    </div>
+  </div>
+</header>
+
+
+<div class="bg-grey container-fluid mt-2">
   <div class="row">
     <div class="bg-color col mb-5">
-     <h2>Payments for <%= @category.name %></h2>
-     <p>Total Amount: <%= @total_amount %></p>
+      <div class="align-custom bg-white d-flex justify-content-around my-2 rounded-2">
+        <p>Payments for <%= @category.name %></p>
+        <p>Total Amount: <%= @total_amount %></p>
+      </div>
       <% @payments.each do |payment| %>
         <ul class="bg-white border-0 list-unstyled p-3 rounded-2 shadow">
           <li class="dotted">
             <%= payment.name.titleize %>
           </li>
-          <hr class="dotted">
+          <div class="border-top my-3"></div>
           <li>
             Date: <%= payment.created_at.strftime("%Y-%m-%d") %>
           </li>
-          <hr class="dotted">
+          <div class="border-top my-3"></div>
           <li>
               <div class="d-flex justify-content-between">
               <p>TOTAL PAYMENT:</p>
