--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,13 +1,19 @@
+<header>
+  <div class="d-flex justify-content-between align-items-center bg-blue p-3">
+    <%= link_to root_path do %>
+      <box-icon class="" name='arrow-back' color='#fff'></box-icon>
+    <% end %>
+    <h2 class="text-white">NEW CATEGORIES</h2>
+    <div class="position-relative">
+      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "logout-btn p-0" %>
+    </div>
+  </div>
+</header>
+
 <div class="bg-grey container-fluid vh-100">
   <div class="row">
-    <div class="bg-color col mt-5">
-      <h2 class="fs-6 log-title py-4 text-center text-white section-title">NEW CATEGORY</h2>
-      <%= link_to root_path do %>
-        <box-icon class="arrow-back" name='arrow-back' color='#fff'></box-icon>
-      <% end %>
+    <div class="bg-color col">
         <%= render "form", category: @category %>
-      </div>
     </div>
 </div>
-
 
