--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,23 +1,29 @@
 <header>
   <div class="d-flex justify-content-between align-items-center bg-blue p-3">
     <%= link_to root_path do %>
-      <box-icon class="" name='arrow-back' color='#fff'>asd</box-icon>
+      <box-icon class="" name='arrow-back' color='#fff'></box-icon>
     <% end %>
     <h2 class="text-white">PAYMENTS</h2>
     <div class="position-relative">
-      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn text-white" %>
+      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "logout-btn p-0" %>
     </div>
   </div>
 </header>
 
+<div class="bg-grey">
+  <div class="row">
+    <div class="bg-grey container-fluid ">
+      <div class="align-custom bg-white d-flex justify-content-around   rounded-2">
+        <p>Payments for <%= @category.name %></p>
+        <p>Total Amount: <%= @total_amount %></p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="bg-grey container-fluid mt-2">
   <div class="row">
     <div class="bg-color col mb-5">
-      <div class="align-custom bg-white d-flex justify-content-around my-2 rounded-2">
-        <p>Payments for <%= @category.name %></p>
-        <p>Total Amount: <%= @total_amount %></p>
-      </div>
       <% @payments.each do |payment| %>
         <ul class="bg-white border-0 list-unstyled p-3 rounded-2 shadow">
           <li class="dotted">
