--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/proxima-nova-condensed');
+@import url('https://fonts.googleapis.com/css2?family=Proxima+Nova:wght@300;600&display=swap');
+
 :root {
   --main: #3778c2;
   --second: #5fb523;
   --color-text: #434b54;
+  --light-fuente: 'proxima-nova', sans-serif
 }
 
 body {
@@ -29,6 +32,14 @@ p {
 
 .title {
   height: 60vh !important;
+}
+
+.snap {
+  color: var(--color-text);
+  font-size: 3rem;
+  user-select: none;
+  font-style: italic;
+  font-family: var(--light-fuente);
 }
 
 .user-btn a:hover{
