--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Forgot your password?</h2>
+<header>
+  <div class="d-flex justify-content-between align-items-center bg-blue p-3">
+    <%= link_to(root_path) do %>
+      <box-icon name='arrow-back' color='#fff'></box-icon>
+    <% end %>
+    <h2 class="text-white">Forgot your password?</h2>
+    <div class="position-relative">
+      <%= link_to("", root_path, class: "logout-btn p-0") %>
+    </div>
+  </div>
+</header>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter You Email Here", class:"custom-input custom-input-email mt-2 rounded-0 w-100" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="actions mt-2 text-center">
+    <%= f.submit "Send me reset password instructions", class:"btn btn-primary" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
