--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_with(model: @category, local: true, class: "py-5") do |form| %>
+<%= form_with(model: @category, local: true) do |form| %>
   <% if @category.errors.any? %>
-    <div style="color: red" class="alert alert-warning">
-      <ul class="list-unstyled">
+    <div style="color: red" class="alert alert-warning mt-2 mb-0">
+      <ul class="list-unstyled mb-0">
         <% @category.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
@@ -9,23 +9,23 @@
     </div>
   <% end %>
 
-  <div class="">
-    <div class="my-2">
-      <%= form.text_field :name, placeholder: "Name", class: "border-0 my-2 p-2 rounded-3 shadow w-100" %>
-    </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <div class="mt-2">
+          <%= form.text_field :name, placeholder: "Name", class: "border-0 my-2 p-2 rounded-3 shadow w-100" %>
+        </div>
 
-    <div>
-      <%= form.select :icon, ICONS, { prompt: "Select an icon" }, class: "border-0 my-2 p-2 rounded-3 shadow w-100" %>
-    </div>
-  </div>
-  
-  <div class="footer-container">
-    <div class="text-center">
-      <div class="btn-green p-2">
-        <div class="border-light btn w-100">
-          <%= form.submit class: "btn p-0 text-white" %>
+        <div class="mt-2">
+          <%= form.select :icon, ICONS, { prompt: "Select an icon" }, class: "border-0 my-2 p-2 rounded-3 shadow w-100" %>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="footer-container">
+    <div class="btn-green p-2">
+      <%= form.submit class: "border-light btn btn-green w-100" %>
+    </div>
+  <div>
 <% end %>
