--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,58 +1,44 @@
-<header>
-  <div class="d-flex justify-content-between align-items-center bg-blue p-3">
-       <box-icon name='bank' type='solid' color='#fefffe' ></box-icon>
-     <h2 class="text-white">CATEGORIES</h2>
-    <div class="position-relative">
-      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "logout-btn p-0" %>
-    </div>
-  </div>
-</header>
+<%= render "shared/header", title: 'CATEGORIES', icon: 'home-alt-2', link: root_path, logout: true %>
 
-<div class="bg-grey">
-  <div class="row">
-    <div class="bg-grey container-fluid ">
-      <div class="align-custom bg-white d-flex justify-content-around   rounded-2">
+<div class="bg-white rounded-2 rounded-top-0 py-1 sticky-after-header shadow">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="d-flex justify-content-around">
           <p>Gift credit</p>
           <p>$45.00</p>
       </div>
     </div>
   </div>
 </div>
-</div>
-</div>
-<div class="bg-grey container-fluid">
-  <div class="row">
-    <div class="col bg-color">
 
-      <div id="categories">
+<div class="container-fluid site-content mt-3">
+  <div class="row">
+    <div class="col">
+      <div id="categories" class="d-flex flex-column gap-3">
         <% @categories.each do |category| %>
-        
           <div id="<%= dom_id category %>" class="zoom-on-hover">
             <%= link_to category_payments_path(category),class:"text-decoration-none", :action => 'go' do %>
-            <div class="bg-body border d-flex justify-content-evenly mt-3 p-3 shadow">
-               <p class="text-body-tertiary">
-              <%= category.icon %>
-            </p>
-
-            <p class="text-body-tertiary input-width">
-              <%= category.name %>
-            </p>
-
-             <p class="text-black">
-              <%= number_to_currency(total_amount(category)) %>
-            </p>
-            </div>  
+              <div class="bg-body border d-flex justify-content-evenly p-3 shadow">
+                <p class="text-body-tertiary">
+                  <%= category.icon %>
+                </p>
+                <p class="text-body-tertiary input-width">
+                  <%= category.name %>
+                </p>
+                <p class="text-black">
+                  <%= number_to_currency(total_amount(category)) %>
+                </p>
+              </div>
             <% end %>
           </div>
         <% end %>
       </div>
-      <div class="footer-container">
-      <div class="text-center">
-        <div class="btn-green p-2">
-          <%= link_to "Add a New Category", new_category_path, class:"border-light btn btn-green w-100" %>
-        </div>
-      <div>
-      <div>
     </div>
   </div>
 </div>
+
+<div class="footer-container">
+  <div class="btn-green p-2">
+    <%= link_to "Add a New Category", new_category_path, class:"border-light btn btn-green w-100" %>
+  </div>
+<div>
