--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,19 +1,3 @@
-<header>
-  <div class="d-flex justify-content-between align-items-center bg-blue p-3">
-    <%= link_to root_path do %>
-      <box-icon class="" name='arrow-back' color='#fff'></box-icon>
-    <% end %>
-    <h2 class="text-white">NEW CATEGORIES</h2>
-    <div class="position-relative">
-      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "logout-btn p-0" %>
-    </div>
-  </div>
-</header>
+<%= render "shared/header", title: 'NEW CATEGORY', icon: 'arrow-back', link: root_path, logout: true %>
 
-<div class="bg-grey container-fluid vh-100">
-  <div class="row">
-    <div class="bg-color col">
-        <%= render "form", category: @category %>
-    </div>
-</div>
-
+<%= render "form", category: @category %>
