--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,24 +1,21 @@
-<header>
-  <div class="d-flex justify-content-between align-items-center bg-blue p-3">
-    <%= link_to(root_path) do %>
-      <box-icon name='arrow-back' color='#fff'></box-icon>
-    <% end %>
-    <h2 class="text-white">Forgot your password?</h2>
-    <div class="position-relative">
-      <%= link_to("", root_path, class: "logout-btn p-0") %>
+<%= render "shared/header", title: 'Forgot your password?', icon: 'arrow-back', link: root_path, logout: false %>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+
+        <div class="field">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter You Email Here", class:"custom-input custom-input-email mt-2 rounded-0 w-100" %>
+        </div>
+
+        <div class="actions mt-2 text-center">
+          <%= f.submit "Send me reset password instructions", class:"btn btn-primary" %>
+        </div>
+      <% end %>
     </div>
   </div>
-</header>
+</div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter You Email Here", class:"custom-input custom-input-email mt-2 rounded-0 w-100" %>
-  </div>
-
-  <div class="actions mt-2 text-center">
-    <%= f.submit "Send me reset password instructions", class:"btn btn-primary" %>
-  </div>
-<% end %>
 
