--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,39 @@
-<header>
-  <div class="d-flex justify-content-between align-items-center bg-blue p-3">
-    <%= link_to(root_path) do %>
-      <box-icon name='arrow-back' color='#fff'></box-icon>
-    <% end %>
-    <h2 class="text-white">REGISTER</h2>
-    <div class="position-relative">
-      <%= link_to("", root_path, class: "logout-btn p-0") %>
+<%= render "shared/header", title: 'REGISTER', icon: 'arrow-back', link: root_path, logout: false %>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="text-center log-input mt-2">
+          <div class="field input-group">
+            <div class="input-group-prepend">
+              <box-icon name='user-circle' type='solid' color='#ccc' class="user-icon"></box-icon>
+            </div>
+            <%= f.file_field :photo, autofocus: true, autocomplete: "photo", class: "custom-input custom-input-email px-5 py-4 rounded-0 w-100" %>
+          </div>
+
+          <div class="field mt-2">
+            <%= f.text_field :name, autocomplete: "name", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Full Name" %>
+          </div>
+
+          <div class="field mt-2">
+            <%= f.email_field :email, autocomplete: "email", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Email" %>
+          </div>
+
+          <div class="field mt-2">
+            <%= f.password_field :password, autocomplete: "new-password", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Password" %>
+          </div>
+
+          <div class="field mt-2">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Confirm Password" %>
+          </div>
+
+          <div class="actions my-2">
+            <%= f.submit "Sign up", class:"btn btn-primary px-5" %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
-</header>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="text-center log-input">
-    <div class="field input-group">
-      <div class="input-group-prepend">
-        <box-icon name='user-circle' type='solid' color='#ccc' class="user-icon"></box-icon>
-      </div>
-      <%= f.file_field :photo, autofocus: true, autocomplete: "photo", class: "custom-input custom-input-email px-5 py-4 rounded-0 w-100" %>
-    </div>
-
-    <div class="field">
-      <%= f.text_field :name, autocomplete: "name", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Full Name" %>
-    </div>
-
-    <div class="field">
-      <%= f.email_field :email, autocomplete: "email", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Email" %>
-    </div>
-
-    <div class="field">
-      <%= f.password_field :password, autocomplete: "new-password", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Password" %>
-    </div>
-
-    <div class="field">
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "custom-input custom-input-email w-100 rounded-0", placeholder: "Confirm Password" %>
-    </div>
-
-    <div class="actions my-2">
-      <%= f.submit "Sign up", class:"btn btn-primary" %>
-    </div>
-  </div>
-<% end %>
+</div>
